--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,28 @@
 * {
   list-style-type: none;
 }
+
 * {
   text-decoration: none;
 }
+
 * {
   margin: 0;
   padding: 0;
 }
+
 h1 {
   margin: 0;
 }
+
 h2 {
   margin: 0;
 }
+
 h3 {
   margin: 0;
 }
+
 h4 {
   margin: 0;
 }
@@ -410,13 +416,12 @@ img {
   border-radius: 50%;
   fill: #afb1b8;
   transition: fill 250ms, background-color 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); 
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .boxcard-link:hover {
   fill: #ffffff;
   background-color: #2196f3;
-
 }
 
 .section-logo {
@@ -453,10 +458,9 @@ img {
   border-radius: 5px;
   display: flex;
   align-items: center;
-  justify-content: center;   
+  justify-content: center;
   transition: border-color 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  
 }
 
 .clients-link:hover {
@@ -470,7 +474,6 @@ img {
   fill: #afb1b8;
   transition: fill 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .clients-logo:hover {
@@ -586,6 +589,64 @@ img {
   fill: #ffffff;
 }
 
+.mailbox-title{
+  margin-bottom: 20px;
+font-weight: 700;
+font-size: 14px;
+line-height: 16px;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: #FFFFFF;
+}
+
+
+.mailbox-input{
+  width:358px ;
+  height: 50px;
+  padding: 15px;
+  color: #ffffff;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  background: transparent;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+
+.mailbox-button{
+  position: relative;
+  width: 200px;
+  height: 50px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #FFFFFF;
+  background-color: #2196f3;
+  border-color: #2196f3;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.mailbox-icon{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  margin-left: 10px;
+  fill: #FFFFFF;
+}
+
+
+
+
+
+
+
+
+
+
+
 /*PORTFOLIO CSS*/
 
 .section-portfolio {
@@ -673,7 +734,6 @@ img {
 }
 
 .main-title-portfolio {
-  
   color: #212121;
   font-weight: 700;
   font-size: 18px;
@@ -700,8 +760,8 @@ img {
   opacity: 0;
   transform: translateY(100%);
   background-color: rgba(33, 150, 243, 0.9);
-  transition: transform 250ms, opacity 250ms; 
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); 
+  transition: transform 250ms, opacity 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .element-img:hover .element-img-title {
@@ -718,6 +778,11 @@ img {
   color: #ffffff;
 }
 
+
+
+
+
+
 /*Modal Window*/
 .backdrop {
   position: fixed;
@@ -730,6 +795,7 @@ img {
   transition: opacity 250ms, visibility 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .is-hidden {
   opacity: 0;
   visibility: hidden;
@@ -738,6 +804,7 @@ img {
 
 .modal {
   position: absolute;
+  padding: 40px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -747,13 +814,20 @@ img {
 }
 
 .title-modal {
-  margin: 40px 40px auto 40px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 30px;
+  color: #212121;
+  
 }
 
 .modal-close-button {
   position: absolute;
-  top: 8px;
-  right: 8px;
+  top: 17px;
+  right: 17px;
   width: 30px;
   height: 30px;
   background-color: #ffffff;
@@ -761,9 +835,154 @@ img {
   border-radius: 50%;
   cursor: pointer;
   fill: #000000;
+  transition: fill 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-button:hover {
-  fill: #ffffff;
+  fill: #2196f3;
+}
+
+.form-label {
+  display: block;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: #757575;
+  margin-bottom: 4px;
+}
+
+.form-control {
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.form-input {
+  width: 100%;
+  padding: 10px 12px 10px 32px; 
+  line-height: 1.125; 
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+  transition: border-color 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:focus {
+  border-color: #2196f3;
+}
+
+.form-icon {
+  position: absolute;
+  top: 12px;
+  left: 12px;
+  fill: currentColor;
+  transition: fill 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-control:focus-within .form-icon {
+  fill: #2196f3;
+}
+
+.form-textarea {
+  display: block;
+  width: 100%;
+  max-width: 448px;
+  height: 120px;
+  padding: 12px;
+  margin-left: 0;
+  margin-bottom: 20px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+
+
+/*chekbox*/
+
+.checkbox-input {
+  appearance: none;
+}
+
+.checkbox-label {
+  position: relative;
+  padding-left: 28px;
+  margin-bottom: 30px;
+  font-weight: 400;
+font-size: 14px;
+line-height: 24px;
+
+letter-spacing: 0.03em;
+
+color: #757575;
+
+}
+
+.checkbox-label::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 16px;
+  height: 15px;
+  border: 1px solid #212121;
+  border-radius: 2px;
+  content: "";
+}
+
+.checkbox-label::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 16px;
+  height: 15px;
+  border: 1px solid #212121;
+  border-radius: 2px;
+  background-image: url(../images/SVG/Vector.svg#icon-Vector-2);
+  background-repeat: no-repeat;
   background-color: #2196f3;
+  transform: translate();
+  opacity: 0;
+  content: "";
+}
+
+.checkbox-input:checked + .checkbox-label::after {
+  opacity: 1;
+  transition: opacity 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-button {
+  display: block; 
+  margin: 0 auto; 
+  padding: 9px 51px; 
+  font-size: 16px; 
+  line-height: 1.88;
+  letter-spacing: 0.06em; 
+  font-weight: 700; 
+  color: #FFFFFF; 
+  background-color: #2196f3; 
+  border-color: transparent; 
+  border-radius: 4px; 
+  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%); 
+  cursor: pointer
+}
+
+.modal-button:hover{
+  background-color: #188CE8;
+  transition: background-color 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0%;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
 }
