--- a/css/styles.css
+++ b/css/styles.css
@@ -621,7 +621,7 @@ color: #FFFFFF;
   font-size: 16px;
   line-height: 30px;
   align-items: center;
-  text-align: center;
+  justify-content: center;
   letter-spacing: 0.06em;
   color: #FFFFFF;
   background-color: #2196f3;
@@ -629,6 +629,7 @@ color: #FFFFFF;
   border-radius: 4px;
   cursor: pointer;
 }
+
 
 .mailbox-icon{
   position: absolute;
